--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
   "expo": {
+      "packagerOpts": {
+      "sourceExts": ["js", "jsx", "scss", "sass"],
+      "transformer": "node_modules/react-native-sass-transformer/index.js"
+    },
     "name": "Coplan-app",
     "slug": "Coplan-app",
     "version": "1.0.0",
