--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
