--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
+    "react-native-mask-text": "^0.13.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
     "react-native-screens": "~3.18.0",
