--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~47.0.9",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.42.1",
@@ -33,8 +34,10 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-notifications": "^3.3.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "sass": "^1.57.1",
+    "tailwindcss": "^3.2.7",
     "zod": "^3.20.2",
     "zustand": "^4.3.2"
   },
